Add longsleep/build-pine64-image and fix bugs.

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 [submodule "external/sunxi-pack-tools"]
 	path = external/sunxi-pack-tools
 	url = git://github.com/longsleep/sunxi-pack-tools
+[submodule "external/longsleep-build-pine64-image"]
+	path = external/longsleep-build-pine64-image
+	url = git://github.com/longsleep/build-pine64-image
